checker/tests/parsing/errors/double_when.mft
type T {
  when A { .. } when B { .. } impl C;
}
=== error ===
Unrecognized token `when` found at 25:29
Expected one of "impl" or "|"